target/classes/META-INF/fabric8/openshift/i-disa-prd-shipment-order-interface-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: i-disa-prd-shipment-order-interface
    provider: fabric8
    version: 0.1.0
    group: com.redhat
  name: i-disa-prd-shipment-order-interface
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: i-disa-prd-shipment-order-interface
